# MLB

./: .dockerignore  .ebignore  .env.example  .gitignore  Dockerfile  README.md  app.py  backfill_database.py  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml  refresh_database.py  refresh_nightly.py  refresh_weather_cache.py  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.ebextensions/: 01_application.config
.streamlit/: config.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/all_rise_api/: dependencies.py  errors.py  main.py
apps/api/src/all_rise_api/api/: __init__.py
apps/api/src/all_rise_api/api/v1/: __init__.py
apps/api/src/all_rise_api/api/v1/routes/: __init__.py  live.py  operations.py  research.py  slate.py
apps/api/src/all_rise_api/middleware/: rate_limit.py
apps/api/src/all_rise_api/schemas/: __init__.py  live.py  research.py  slate.py
data/: batters_2025.csv  batters_2026.csv  matchup_cache.json  nightly_refresh_log.txt  pitchers_2025.csv  pitchers_2026.csv
scripts/: backfill_pitch_data.py  export_openapi.py  refresh_pitch_data.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/all_rise_worker/: adapters.py  broker.py  catalog.py  providers.py  runtime.py
services/worker/src/all_rise_worker/actors/: __init__.py  tasks.py
src/: advanced_bvp_data.py  api_client.py  background.py  bullpen_projection.py  bvp_research.py  database.py  injuries.py  live_game.py  matchup_grading.py  matchups.py  mlb_schedule.py  pitch_analysis.py  pitch_data.py  player_rankings.py  recent_form.py  (+5 more)
(+170 files in other folders)
