[project]
name = "all-rise-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "all-rise-backend",
  "fastapi>=0.115,<1",
  "redis>=6,<9",
  "uvicorn[standard]>=0.34,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/all_rise_api"]

[tool.uv.sources]
all-rise-backend = { workspace = true }
