[project]
name = "all-rise-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "all-rise-backend",
  "dramatiq[redis]>=1.17,<3",
  "google-cloud-storage>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/all_rise_worker"]

[tool.uv.sources]
all-rise-backend = { workspace = true }
